c9 fix + button size and position and nav bar menu items spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,27 +29,20 @@ html {
         margin: auto;
     }
 
-    #header #header_bar #plus_button {
-        /*border: 2px solid #FF0000;*/
-        border: 1px solid orange;
+    #header #header_bar #plus_button {  /* need to get colors closer to mockup */
+        /*background-color: yellow;*/
+        font-family: 'Lato', sans-serif;
+        border: 2px solid #FF0000;
         color: #913A20;
-        width: 20px;
-        height: 20px;
+        width: 28px;
+        height: 28px;
         position: absolute;
-        top: 16px;
-        right: 16px;
-        font-size: 28px;
+        top: 15px;
+        right: 15px;
+        font-weight: normal;
+        font-size: 38px;
         text-decoration: none;
-        line-height: 16px;
-    }
-
-    /*NAVIGATION*/
-
-    #header #nav_bar {
-        display: block;
-        opacity: 0.8;
-        background-color: black;
-        width: 100%;
+        line-height: 25px;
     }
 
     /*The following maintains the button color through hover and clicks*/
@@ -85,20 +78,30 @@ html {
     width: 100%;
 }*/
 
+    #header #nav_bar {
+        display: block;
+        opacity: 0.8;
+        background-color: black;
+        width: 100%;
+    }
+
 #header #nav_bar #nav_items {
     padding: 10px 0px;
 }
 
 #header #nav_bar #nav_items li {
+    /*background-color: yellow;*/
     display: inline-block;
-    margin-right: 30px;
-    /*font-family: 'Oswald', sans-serif;*/
-    font-size: 14px;
+    margin-right: 5px;
+    padding-bottom: 4px;  /* margin and padding bottom makes bar taller - how do i vertical center text? */
+    font-size: 18px;
 }
 
 #header #nav_bar #nav_items .middot {
+    /*background-color: orange;*/
     color: #6E6F72;
-    font-size: 20px;
+    font-size: 25px;  /* increasing makes little bigger, but goes up, looks square */
+    font-weight: bolder;
 }
 
 #header #nav_bar #nav_items li a {
